--- a/01_areal.html
+++ b/01_areal.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="">
     <title></title>
 
     <style>
@@ -19,21 +20,24 @@
 <body>
 
     <main>
-        <h2>Html</h2>
+        <h2></h2>
 
         <article>
-            <p>
 
-                Html er et programmeringssprog.
-
-            </p>
 
         </article>
 
 
     </main>
 
-    <script src="script.js"></script>
+    <script>
+        let længde = 31;
+        let bredde = 25;
+        let areal = længde * bredde;
+        let resultat = `Længden er ${længde} meter og bredden er ${bredde} meter. Arealet er ${areal}`;
+        console.log(resultat);
+
+    </script>
 
 
 </body>
