--- a/undervisningsopgaver/01_js_basics/11_guess.html
+++ b/undervisningsopgaver/01_js_basics/11_guess.html
@@ -18,35 +18,33 @@
 </head>
 
 <body>
-    <p>Hvad er længden på din flyrejse i timer?</p>
-    <input type="text" id="længde">
+    <p>Gæt mit tal mellem 0 og 20</p>
+    <input type="text" id="gæt">
 
-    <button>Klik og beregn c02-udledningen, kig i konsollen</button>
+    <button>Gæt!</button>
+    <button id="nyt_spil">Nyt Spil</button>
 
     <script>
-        document.querySelector("button").addEventListener("click", buttonClicked);
+        const tilfaeldigtTal = Math.round(Math.random() * 20);
+        let antalGæt = 0;
+        document.querySelector("button").addEventListener("click", guessTal);
 
-        function buttonClicked() {
-            let længde = document.querySelector("#længde").value;
-            let tal = 109
-            let a = areal(længde, tal);
-            let resultat;
-            if (isNaN(a)) {
-                resultat = "Det er ikke et tal, prøv igen";
+        function guessTal() {
+            antalGæt++;
+            const guess = document.querySelector("#gæt").value;
+            //console.log("tilfaeldigtTal", tilfaeldigtTal);
+            console.log("brugergæt", guess);
+            if (guess == tilfaeldigtTal) {
+                console.log("RIGTIGT");
 
-            } else if (a <= 0) {
-                resultat = "arealet er mindre end nul, prøv igen";
+            } else if (guess < tilfaeldigtTal) {
+
+                console.log(`For lavt. Du har gættet ${antalGæt} gange`);
+
             } else {
-                resultat = `Co2-udledningen er ${a} kg`;
+                console.log(`For højt. Du har gættet ${antalGæt} gange`);
+
             }
-
-            console.log(resultat);
-        }
-
-        function areal(l, t) {
-            return l * t;
-
-
         }
 
     </script>
