--- a/undervisningsopgaver/01_js_basics/12_date.html
+++ b/undervisningsopgaver/01_js_basics/12_date.html
@@ -13,50 +13,45 @@
 
 <body>
 
-    <p>Hvad er din alder?</p>
-    <input type="text" id="længde">
-    <p>Hvad er din dates alder?</p>
-    <input type="text" id="bredde">
-    <button>Klik og se om reglen er overholdt, kig i konsollen</button>
+    <p>Din alder?</p>
+    <input type="text" id="dinAlderTxt">
+
+    <p>Din dates alder?</p>
+    <input type="text" id="dinDatesAlderTxt">
+
+    <button>Går det?</button>
 
     <script>
-        document.querySelector("button").addEventListener("click", buttonClicked);
+        let dinAlder;
+        let datesAlder;
+        let minimumAlder;
+        let maximumAlder;
 
-        function buttonClicked() {
-            let længde = document.querySelector("#længde").value;
-            let bredde = document.querySelector("#bredde").value;
-            let a = areal(længde, bredde);
-            let b = areal(længde, bredde);
-            let resultat;
-            if (isNaN(a)) {
-                resultat = "Det er ikke et tal, prøv igen";
-            } else if (a, b < 15) {
-                resultat = "alderen er mindre end 15 år, dette kan ikke lade sig gøre";
-            } else if (a / 2 + 7) {
-                resultat = "Reglen er ikke overholdt";
-            } else {
-                resultat = `Reglen er overholdt`;
-            }
+        document.querySelector("button").addEventListener("click", button_clicked);
 
-            if (isNaN(b)) {
-                resultat = "Det er ikke et tal, prøv igen";
+        function button_clicked() {
+            dinAlder = document.querySelector("#dinAlderTxt").value;
+            datesAlder = document.querySelector("#dinDatesAlderTxt").value;
+            //Hvad er det yngste din date må være?
+            minimumAlder = Math.round(dinAlder / 2 + 7);
+            maximumAlder = Math.round((dinAlder - 2) * 7);
+            console.log("minimumAlder", minimumAlder);
+            console.log("maximumAlder", maximumAlder);
 
-            } else if (b < 15) {
-                resultat = "alderen er mindre end 15 år, dette kan ikke lade sig gøre";
-            } else if (b / 2 + 7) {
-                resultat = "Reglen er ikke overholdt";
-            } else {
-                resultat = `Reglen er overholdt`;
-            }
-            console.log(resultat);
         }
+        if (dinAlder < 15 || datesAlder < 15) {
+            console.log("En af parterne er for unge");
+        } else {
+            if (datesAlder >= minimumAlder && datesAlder <= maximumAlder) {
+                console.log("Det er passende")
 
+            } else if (datesAlder < minimumAlder) {
+                console.log(`Du er ${dinAlder} og din date er ${datesAlder} Din date er ${minimumAlder-datesAlder} år for ung`)
 
+            } else if (datesAlder >= maximumAlder) {
+                console.log(`Du er ${dinAlder} og din date er ${datesAlder} Din date er ${datesAlder-maximumAlder} år for gammel`)
 
-        function areal(l, b) {
-            return l, b;
-
-
+            }
         }
 
     </script>
