--- a/undervisningsopgaver/02_js_dom/html_struktur.html
+++ b/undervisningsopgaver/02_js_dom/html_struktur.html
@@ -4,45 +4,79 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Øvelse 1</title>
+    <title></title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+            margin: auto;
+            width: 80%;
+        }
+
+        section {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+
+            grid-gap: 20px;
+        }
+
+        article {
+            border: 1px solid black;
+        }
+
+        img {
+            width: 100%;
+        }
+
+         header,
+        footer {
+            text-align: center;
+            border: 1px solid black;
+            padding 15px;
+        }
+
+    </style>
 </head>
 
+
+
+
+
 <body>
+    <header>
+        <h1>Titel</h1>
+    </header>
+
     <main>
-
+        <h2>Undertitel</h2>
         <section>
+            <article>
+                <img src="https://placeimg.com/400/300/nature" alt="landscape">
+                <h3>Article 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis velit a excepturi blanditiis beatae quod corporis nesciunt eveniet voluptatem voluptatibus dolorum sint recusandae ex, illum, cupiditate consequatur, architecto provident possimus?</p>
+            </article>
 
-        <article>
-           <div class="grid_container">
-            <div id="overskrift">
-                    <h1>Titel</h1>
-            </div>
-        </div>
+            <article>
+                <img src="https://placeimg.com/400/300/nature" alt="landscape">
+                <h3>Article 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam corporis hic repellendus molestiae nihil consequatur sequi non ut excepturi ipsa similique, soluta accusantium quia dolore, maxime aperiam dolor esse fuga.</p>
+            </article>
 
-        </article>
-
-
-           <div class="grid_container2">
-            <div id="overskrift">
-                    <h2>Undertitel</h2>
-            </div>
-        </div>
-
-    <div class="grid_container_img">
-            <div id="billeder">
-                      <img src="">
-            </div>
-        </div>
         </section>
 
+        <footer>
+            This is the footer
+        </footer>
+
     </main>
-    <footer>
 
-            <p>This is a footer</p>
 
-    </footer>
 
+
+    <script></script>
 </body>
 
 </html>
