--- a/undervisningsopgaver/02_js_dom/02_select.html
+++ b/undervisningsopgaver/02_js_dom/02_select.html
@@ -119,6 +119,13 @@
         const footer = document.querySelector("footer");
         console.log(footer);
 
+
+           document.addEventListener("DOMContentLoaded", start);
+
+        function start(){
+
+        }
+
     </script>
 
 </body>
