--- a/undervisningsopgaver/02_js_dom/05_testLoad.html
+++ b/undervisningsopgaver/02_js_dom/05_testLoad.html
@@ -103,16 +103,17 @@
         //tilføj article til section
         mainSection.appendChild(newArticle);
 
-        newArticle.innerHTML = "<img src=cyklister_sort_hvid.jpg> <
-            h1 > Cyklister < /h1> <
-            p > Cyklister på Frederiksundsvej < /p>";
+        newArticle.innerHTML = "<img src=cyklister_sort_hvid.jpg> <h1 > Cyklister </h1> <p > Cyklister på Frederiksundsvej < /p>";
 
         document.addEventListener("DOMContentLoaded", start);
 
         function start() {
-            consol.log("dom er loaded");
-            pic2.src = "two_faces.JPG";
-            pic2.alt = "maleri";
+            console.log("dom er loaded");
+            const pic1 = document.querySelector("article:nth-child(1) img");
+            //console.log(pic1);
+            pic1.src = "greta_forsøg.jpg";
+            const pic2 = document.querySelector("article:nth-child(2) img");
+            //console.log(pic2);
 
         }
 
