--- a/undervisningsopgaver/02_js_dom/07_boxShadow.html
+++ b/undervisningsopgaver/02_js_dom/07_boxShadow.html
@@ -25,6 +25,7 @@
 
         article {
             border: 1px solid black;
+            box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
         }
 
         img {
@@ -123,6 +124,14 @@
         function tilfældigtTal() {
             pic1.src = "https://placeimg.com/400/300/arch?t=" + tilfældigtTal;
         }
+
+
+        newArticle.classList.toggle("newArticle");
+
+        const newArticle = document.querySelector("newArticle");
+        article.style.boxShadow =
+
+            const team = ["Claus", "Martin", "Peter", "Alan"];
 
     </script>
 
